--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
 BC250,[[:space:]]2023.shp filter=lfs diff=lfs merge=lfs -text
+shapefile/BC250,[[:space:]]2023.shp filter=lfs diff=lfs merge=lfs -text
