Preparação para submissão ao repositório oficial QGIS
- Adiciona arquivo LICENSE (GPL-3.0)
- Remove shapefile local (120MB) para atender limite de 25MB
- Atualiza .gitignore para shapefiles
- Adiciona campo license no metadata.txt
- Plugin agora tem apenas 2.9MB (dentro do limite oficial)

Próximos passos:
- Criar conta OSGEO ID
- Converter comentários para inglês
- Substituir 'requests' por QgsNetworkAccessManager

--- a/.gitignore
+++ b/.gitignore
@@ -75,4 +75,14 @@ htmlcov/
 
 # Arquivos específicos do projeto (se necessário)
 # config.ini
-# credentials.txt 
+# credentials.txt
+
+# Shapefiles locais (muito grandes para repositório)
+shapefile/
+*.shp
+*.dbf
+*.shx
+*.prj
+*.sbn
+*.sbx
+*.cpg 
